Application module i18ned

--- a/web/frontend/application/menu/breadcrumbs.tpl.html
+++ b/web/frontend/application/menu/breadcrumbs.tpl.html
@@ -1,4 +1,4 @@
-<li><a href="/" class="j-nav"><i class="icon-home"></i> Дэшборд</a></li>
+<li><a href="/" class="j-nav"><i class="icon-home"></i> <%=i18n.dashboard%></a></li>
 <%_(model.breadcrumbs()).each(function(item, i){
 if(item.url == "/") return;
 %>
