--- a/web/frontend/application/menu/regionSelector.tpl.html
+++ b/web/frontend/application/menu/regionSelector.tpl.html
@@ -6,4 +6,4 @@ return app.collection('regions').get(regionId).get('title');}).value().join(', '
 <%}else{%>
 <a href="<%=model.opts.switchLocaleUrl%>">En</a> | <span>Рус</span>
 <%};%>
-</span
+</span>
