--- a/web/frontend/application/menu/profile.tpl.html
+++ b/web/frontend/application/menu/profile.tpl.html
@@ -13,7 +13,7 @@
         <!--<ul class="dropdown-menu black-box-dropdown">-->
         <!--...-->
         <!--</ul>-->
-        <a href="<%=app.routes.logout%>" class="button mini inset black"><i class="icon-signout"></i> Logout</a>
+        <a href="<%=app.routes.logout%>" class="button mini inset black"><i class="icon-signout"></i> <%=i18n.logout%></a>
     </div>
 </div>
 
